initial commit for korone

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "ぺこらボタン Peko Button",
-    "short_name": "ぺこらボタン",
+    "name": "ころねボタン Korone Button",
+    "short_name": "ころねボタン",
     "icons": [{
             "src": "/img/icons/android-chrome-192x192.png",
             "sizes": "192x192",
