--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,12 +2,12 @@
     "name": "ころねボタン Korone Button",
     "short_name": "ころねボタン",
     "icons": [{
-            "src": "/img/icons/android-chrome-192x192.png",
+            "src": "/img/icons/192.png",
             "sizes": "192x192",
             "type": "image/png"
         },
         {
-            "src": "/img/icons/android-chrome-512x512.png",
+            "src": "/img/icons/512.png",
             "sizes": "512x512",
             "type": "image/png"
         }
